--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 
-spring.datasource.url = jdbc:mysql://db-test-lambda.coyfmkjapkih.us-east-1.rds.amazonaws.com:3306/lab
+spring.datasource.url = jdbc:mysql://localhost:3306/lab
 spring.datasource.username = admin
-spring.datasource.password = d4s4_teste$
+spring.datasource.password = admin
